# ssno

./: .gitignore  GUIDE.md  README.md  build_onto_doc.bat  build_onto_doc_tmp.bat  deploy.py  generate_context.py  requirements-test.txt  requirements-tutorial.txt  requirements.txt  setup.cfg  ssno.ttl  ssno_bakup.ttl  ssno_context.jsonld  widoco.cfg  widoco_ssno.cfg
docs/: index-en.html  index.html  ontology.jsonld  ontology.nt  ontology.owl  ontology.ttl  ssno.jsonld  ssno.nt  ssno.owl  ssno.ttl
docs/1.0.0/: index.html  ontology.nt  ontology.owl  ssno.ttl
docs/1.1.0/: index.html  ssno.jsonld  ssno.nt  ssno.owl  ssno.ttl
docs/1.2.0/: index-en.html  index.html  ontology.ttl  ssno.jsonld  ssno.nt  ssno.owl  ssno.ttl
docs/1.2.1/: index.html  ssno.owl  ssno.ttl
docs/1.3.0/: index-en.html  index.html  ontology.jsonld  ontology.nt  ontology.owl  ontology.ttl  ssno.jsonld  ssno.nt  ssno.owl  ssno.ttl
docs/1.3.1/: index.html  ssno.jsonld  ssno.nt  ssno.owl  ssno.ttl
docs/1.3.2/: index.html  ssno.jsonld  ssno.nt  ssno.owl  ssno.ttl
docs/1.4.0/: index.html  ssno.jsonld  ssno.nt  ssno.owl  ssno.ttl
docs/1.5.0/: index.html  ssno.jsonld  ssno.nt  ssno.owl  ssno.ttl
docs/1.5.1/: index.html  ssno.jsonld  ssno.nt  ssno.owl  ssno.ttl
docs/2.0.0/: index.html  ssno.jsonld  ssno.nt  ssno.owl  ssno.ttl
documentation/: Abstract.md  Description.md  Introduction.md  ontology_in_3d.html
examples/: Tutorial.ipynb  cfconventions.json  generate_cf_convention_jsonld_file.py
lib/: classes.py
tests/: 1.json  json1.json  json2.json  test_graph.py  test_lib.py  test_usage.py
(+90 files in other folders)
