[metadata]
name = ssno
version = 0.1.0a1
author = Matthias Probst
author_email = matthias.probst@kit.edu
description = A Python library for working with the Simple Standard Name Ontology (SSNO).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/matthiasprobst/ssno
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta

[options]
package_dir=
    =lib
packages = find:
python_requires = >=3.8, <3.13
include_package_data = True
install_requires =
    rdflib
    appdirs
    simplejson
    python-dateutil
    requests
    ontolutils>=0.2.23

[options.packages.find]
where=lib

[options.extras_require]
test =
    pytest >= 7.1.2
    pytest-cov
    pylint
    pyyaml
    xmltodict
complete =
    %(test)s

[tool:pytest]
python_files = test_*.py
testpaths = tests

[coverage:paths]
source =
    tests

[coverage:run]
relative_files = false
